# AgentFramework

./: .gitignore  Makefile  README.md  docker-compose.yml  faq_design.md  package-lock.json  presentation.md
admin-ui/: README.md  (+4 more)
agentcore/: README.md  pyproject.toml
agentcore/docs/: api-reference.md  architecture.md  creating-agents.md  getting-started.md
agentcore/examples/: README.md  demo.py  free_providers_demo.py  multi_agent_demo.py
agentcore/examples/payables_agent/: __init__.py  agent.py  main.py
agentcore/examples/purchasing_agent/: README.md  agent.py  main.py
agentcore/src/agentcore/: __init__.py
agentcore/src/agentcore/api/: __init__.py  models.py  server.py
agentcore/src/agentcore/auth/: __init__.py  context.py  models.py
agentcore/src/agentcore/common/: __init__.py
agentcore/src/agentcore/core/: __init__.py  agent.py  blackboard.py  models.py
agentcore/src/agentcore/embedding/: __init__.py  client.py  protocol.py
agentcore/src/agentcore/inference/: __init__.py
agentcore/src/agentcore/knowledge/: __init__.py  client.py  models.py  retriever.py
agentcore/src/agentcore/orchestrator/: __init__.py  models.py  orchestrator.py
agentcore/src/agentcore/prompts/: __init__.py  fallbacks.py  registry.py
agentcore/src/agentcore/registry/: __init__.py  client.py  heartbeat.py  mock_client.py  models.py
agentcore/src/agentcore/session/: __init__.py  models.py  orm.py  store.py
agentcore/src/agentcore/settings/: __init__.py  agent.py  auth.py  base.py  embedding.py  inference.py  knowledge.py  orchestrator.py  registry.py  session.py  settings.py  tracing.py
agentcore/src/agentcore/sub_agents/: __init__.py  analyzer.py  base.py  executor.py  planner.py  researcher.py  synthesizer.py
agentcore/src/agentcore/tools/: __init__.py  decorator.py  executor.py  models.py  registry.py
agentcore/src/agentcore/tracing/: __init__.py  client.py  context.py  decorators.py
agentcore/src/agentcore/transport/: __init__.py  handlers.py  models.py  parser.py  server.py
agentcore/tests/: __init__.py
agentcore/tests/unit/: test_api.py  test_auth.py  test_core.py  test_knowledge.py  test_mock_registry.py  test_prompts.py  test_registry_models.py  test_session.py  test_settings.py  test_sub_agents.py  test_tools.py  test_tracing.py  test_transport.py
contextforge/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
contextforge/alembic/: env.py
contextforge/alembic/versions/: 001_initial_schema.py  003_add_node_variants.py  004_update_hybrid_search_with_variants.py  005_add_node_metadata.py  006_remove_faq_question_from_content.py  007_rename_user_id_to_email.py
contextforge/app/: main.py
contextforge/app/clients/: __init__.py  embedding_client.py  inference_client.py  langfuse_client.py
contextforge/app/contextforge/cli/: commands.py
contextforge/app/contextforge/core/: __init__.py  planning_models.py
contextforge/app/contextforge/generation/: __init__.py  inference.py  pipeline.py  strategies.py
contextforge/app/contextforge/graph/: bm25_index.py
contextforge/app/contextforge/prompts/: langfuse_sync.py  models.py
contextforge/app/contextforge/retrieval/: __init__.py
contextforge/app/contextforge/schema/: api_schema.py
contextforge/app/contextforge/storage/: __init__.py  schema_store.py
contextforge/app/core/: config.py  redis.py
contextforge/app/models/: __init__.py  analytics.py  edges.py  enums.py  nodes.py
contextforge/app/onboarding/: base.py  entity_pipeline.py  feature_permission_pipeline.py  models.py  playbook_pipeline.py
contextforge/app/prompts/: onboarding_entity_extraction.json  onboarding_faq_extraction.json  onboarding_feature_permission_extraction.json  onboarding_playbook_extraction.json
contextforge/app/routes/: __init__.py  datasets.py  edges.py  graph.py  health.py  knowledge.py  nodes.py  search.py  sync.py  tenants.py
contextforge/app/schemas/: __init__.py  context.py  datasets.py  onboarding.py  search.py  staging.py
contextforge/app/services/: __init__.py  edge_service.py  graph_service.py  knowledge_service.py  metrics_service.py  node_service.py  queryforge_service.py  tenant_service.py  variant_service.py
contextforge/contextforge/: __init__.py
contextforge/contextforge/core/: config.py  exceptions.py
contextforge/contextforge/protocols/: auth.py  embedding.py
contextforge/contextforge/providers/auth/: __init__.py  jwt.py
contextforge/contextforge/providers/embedding/: mock.py  sentence_transformers.py
contextforge/docs/: API_REFERENCE.md  COMPLETE_WORKFLOW.md  CONTEXT_RAG.md  DEVELOPER_GUIDE.md  FEATURES_ARCHITECTURE.md  INTEGRATION_GUIDE.md  LIBRARY_DESIGN.md  PROJECT_INDEX.md  QUERY_GENERATION.md  QUICKSTART.md  RETRIEVAL_DESIGN.md  SCHEMA_ONBOARDING.md  content-onboarding.md  llm-context-api.md
contextforge/examples/: README.md  complete_workflow.py  library_integration.py  test_hybrid_search.py
contextforge/examples/sample_schemas/: orders_openapi.yaml  orders_opensearch.json  orders_postgres.sql
contextforge/jobs/: __init__.py  ticket_pipeline_job.py
contextforge/pipeline/: __init__.py
contextforge/scripts/: bundle_admin_ui.py  seed_po_demo.sql  seed_test_data.sql
contextforge/src/app/: main.py
contextforge/src/contextforge/: __init__.py
contextforge/src/pipeline/: service.py
contextforge/tests/app/: __init__.py  test_auth.py  test_context_service.py  test_onboarding.py  test_query_execution.py  test_query_validator.py  test_rate_limit.py  test_variant_search.py
contextforge/tests/contextforge/: test_learning.py  test_prompts.py
contextforge/tests/test_contextforge/: __init__.py  conftest.py  test_app.py  test_config.py  test_exceptions.py  test_providers.py
infra/: README.md  pyproject.toml
infra/infra/: __init__.py
infra/infra/clients/: postgres.py
infra/infra/embedding/: __init__.py  client.py
infra/infra/inference/: client.py  models.py
infra/infra/settings/: __init__.py
infra/infra/tracing/: __init__.py  context.py  inference.py
infra/tests/unit/: test_auth.py  test_inference.py  test_ssl.py  test_traced_inference.py
(+286 files in other folders)
