[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcore"
version = "0.1.0"
description = "Enterprise agent framework with semantic discovery"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AgentCore Team" }
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "httpx>=0.25",
    "numpy>=1.24",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "infra[inference,embedding,tracing]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentcore"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
