[project]
name = "contextforge"
version = "1.0.0"
description = "Knowledge Management Library for FastAPI - Hybrid search, knowledge graphs, and NL-to-SQL query generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["knowledge-base", "search", "vector-search", "fastapi", "hybrid-search", "knowledge-graph", "embeddings", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Shared Infrastructure
    "infra[inference,embedding,tracing]",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    
    # PostgreSQL Extensions
    "pgvector>=0.2.4",
    
    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sqlparse>=0.5.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    
    # Graph (for Knowledge Verse)
    "networkx>=3.0",
    
    # CLI
    "click>=8.0.0",
    
    # Prompt management & observability
    "langfuse>=2.0.0",
    
    # AgenticSearch QueryForge (local dependency)
    # Install from local path: pip install -e ../agentic_search
    # Or from PyPI when published: agentic-search[queryforge]>=0.8.0
]

[project.optional-dependencies]
# Local embeddings (recommended for offline use)
embeddings = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

# OpenAI integration
openai = [
    "openai>=1.0.0",
    "instructor>=1.0.0",
]

# JWT authentication
jwt = [
    "pyjwt>=2.8.0",
]

# All providers
all = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "openai>=1.0.0",
    "instructor>=1.0.0",
    "pyjwt>=2.8.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
]

[project.scripts]
contextforge = "contextforge.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/contextforge"
Documentation = "https://github.com/yourusername/contextforge#readme"
Repository = "https://github.com/yourusername/contextforge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextforge", "src/app", "src/pipeline"]

[tool.hatch.build.targets.wheel.shared-data]
"src/contextforge/admin" = "share/contextforge/admin"

[tool.hatch.build]
include = [
    "src/contextforge/**/*.py",
    "src/contextforge/admin/**/*",
    "src/app/**/*.py",
    "src/pipeline/**/*.py",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"alembic/*" = ["ARG001"]  # unused arguments in migrations

[tool.ruff.isort]
known-first-party = ["contextforge", "app", "pipeline"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/app", "src/pipeline"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
