[project]
name = "infra"
version = "0.1.0"
description = "Shared infrastructure for FAQ monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
http = ["httpx>=0.25"]
inference = ["openai>=1.0", "httpx>=0.25"]
embedding = ["openai>=1.0", "httpx>=0.25"]
tracing = ["langfuse>=2.0", "httpx>=0.25"]
redis = ["redis>=5.0"]
postgres = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29"]
clickhouse = ["clickhouse-connect>=0.7"]
all = [
    "infra[http,inference,embedding,tracing,redis,postgres,clickhouse]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
